--- a/ansible/playbooks/install_software.yml
+++ b/ansible/playbooks/install_software.yml
@@ -19,3 +19,4 @@
     - {role: installation/qtcreator, when: "'qtcreator' in software_list"}
     - {role: installation/vscode, when: "'vscode' in software_list"}
     - {role: installation/steamvr, when: "'steamvr' in software_list"}
+    - {role: installation/cloud9, when: "'cloud9' in software_list"}
