Added extra dependencies

--- a/ansible/roles/installation/cloud9/tasks/main.yml
+++ b/ansible/roles/installation/cloud9/tasks/main.yml
@@ -8,6 +8,9 @@
     packages:
       - build-essential
       - git
+      - curl
+      - nodejs
+      - npm
   become: yes
       
 - name: Cloning Cloud9 repo
