--- a/ansible/playbooks/install_software.yml
+++ b/ansible/playbooks/install_software.yml
@@ -20,3 +20,4 @@
     - {role: installation/vscode, when: "'vscode' in software_list"}
     - {role: installation/steamvr, when: "'steamvr' in software_list"}
     - {role: installation/cloud9, when: "'cloud9' in software_list"}
+    - {role: installation/gzweb, when: "'gzweb' in software_list"}
