--- a/ansible/roles/installation/gzweb/tasks/main.yml
+++ b/ansible/roles/installation/gzweb/tasks/main.yml
@@ -28,6 +28,12 @@
     repo: https://bitbucket.org/osrf/gzweb
     dest: "{{ gzweb_folder }}"
     revision: gzweb_1.4.0
+    
+- name: Modify node-gyp version to fix syntax issue
+  lineinfile:
+    path: "{{ gzweb_folder }}"/package.json
+    regexp: '^\s*"node-gyp"'
+    line: "node-gyp": "3.0.3"
   
 - name: Running setup
   shell: source /usr/share/gazebo/setup.sh && npm run deploy --- -m
