--- a/ansible/roles/installation/gzweb/tasks/main.yml
+++ b/ansible/roles/installation/gzweb/tasks/main.yml
@@ -33,7 +33,7 @@
   lineinfile:
     path: "{{ gzweb_folder }}/package.json"
     regexp: '^\s*"node-gyp"'
-    line: "node-gyp": "3.0.3"
+    line: '"node-gyp": "3.0.3"'
   
 - name: Running setup
   shell: source /usr/share/gazebo/setup.sh && npm run deploy --- -m
