Added mode for shell script

--- a/ansible/roles/installation/gzweb/tasks/main.yml
+++ b/ansible/roles/installation/gzweb/tasks/main.yml
@@ -4,6 +4,7 @@
   get_url:
     url: https://deb.nodesource.com/setup_10.x
     dest: /tmp/setup_10.sh
+    mode: '0755'
 
 - name: Execute NodeJS repository installer
   shell: /tmp/setup_10.sh
