Removed thumbnail generation for gzweb models

--- a/ansible/roles/installation/gzweb/tasks/main.yml
+++ b/ansible/roles/installation/gzweb/tasks/main.yml
@@ -65,7 +65,7 @@
     line: '"node-gyp": "3.0.3",'
 
 - name: Running setup
-  shell: source /usr/share/gazebo/setup.sh && npm run deploy --- -m -c -t
+  shell: source /usr/share/gazebo/setup.sh && npm run deploy --- -m -c
   args:
     chdir: "{{ gzweb_folder }}"
     executable: /bin/bash
