Make sure that src folder is created

--- a/ansible/roles/installation/rvizweb/tasks/main.yml
+++ b/ansible/roles/installation/rvizweb/tasks/main.yml
@@ -33,7 +33,7 @@
   
 - name: Make sure that workspace folder exists
   file:
-    path: "{{ rvizweb_folder }}"
+    path: "{{ rvizweb_folder }}/src"
     state: directory
     mode: '0755'  
   
