--- a/ansible/roles/installation/cloud9/tasks/main.yml
+++ b/ansible/roles/installation/cloud9/tasks/main.yml
@@ -1,20 +1,5 @@
 ---
 
-- name: Download NodeJS repository installer
-  get_url:
-    url: https://deb.nodesource.com/setup_10.x
-    dest: /tmp/setup_10.sh
-    mode: '0755'
-
-- name: Execute NodeJS repository installer
-  shell: /tmp/setup_10.sh
-  become: yes
-
-- name: Remove installer
-  file:
-    path: /tmp/setup_10.sh
-    state: absent
-    
 - name: Update package lists
   apt:
     update_cache: yes
@@ -32,7 +17,12 @@
       - nodejs
       - npm
   become: yes
-      
+
+- name: Fixing error during installation
+  shell: npm config set unsafe-perm true
+  args:
+    executable: /bin/bash
+
 - name: Cloning Cloud9 repo
   git:
     repo: "https://github.com/c9/core.git"
