Added ARM64 architecture support for Raspberry Pi (#4)
* Added NodeJS 10 installation

* Added npm command for error fixing

* Added TMux to dependencies

--- a/ansible/roles/installation/cloud9/tasks/main.yml
+++ b/ansible/roles/installation/cloud9/tasks/main.yml
@@ -16,8 +16,14 @@
       - curl
       - nodejs
       - npm
+      - tmux
   become: yes
-      
+
+- name: Fixing error during installation
+  shell: npm config set unsafe-perm true
+  args:
+    executable: /bin/bash
+
 - name: Cloning Cloud9 repo
   git:
     repo: "https://github.com/c9/core.git"
